--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">Developer - Graphic Designer - Web Designer</p>
+                <p class="masthead-subheading font-weight-light mb-0">Web Developer - Graphic Designer - </p>
             </div>
         </header>
         <!-- Portfolio Section-->
@@ -476,8 +476,8 @@
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/resume.jpg" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <!--<p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>-->
-                                    <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
-                                        <!--<i class="fas fa-times fa-fw"></i>-->
+                                    <button class="btn btn-primary" href="https://drive.google.com/uc?export=download&id=15MaiBeVHsBJ_5Mxcz11i2M_DNGY3B9L8" data-bs-dismiss="modal">
+                                        <i class="fas fa-download fa-fw" ></i>
                                         Download
                                     </button>
                                 </div>
