--- a/index.html
+++ b/index.html
@@ -476,10 +476,14 @@
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/resume.jpg" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <!--<p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>-->
-                                    <button class="btn btn-primary" href="https://drive.google.com/uc?export=download&id=15MaiBeVHsBJ_5Mxcz11i2M_DNGY3B9L8" data-bs-dismiss="modal">
-                                        <i class="fas fa-download fa-fw" ></i>
-                                        Download
-                                    </button>
+
+                                    <div class="text-center mt-4">
+                                        <a class="btn btn-primary" href="https://drive.google.com/uc?export=download&id=15MaiBeVHsBJ_5Mxcz11i2M_DNGY3B9L8">
+                                            <i class="fas fa-download me-2"></i>
+                                            Download
+                                        </a>
+                                    </div>
+
                                 </div>
                             </div>
                         </div>
