--- a/index.html
+++ b/index.html
@@ -77,7 +77,10 @@
                         <div class="portfolio-item mx-auto">
                             <a href="p1.html">    
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                                <!--
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+                                -->
+                                <h9 class="hahage">Mobile-Based Thesis/Capstone Project Catalogue of University of Luzon College of Computer Studies</h9>
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio/webportfolioCapstoneCatalogue.jpg" alt="..." />
                             </a>
@@ -88,7 +91,7 @@
                         <div class="portfolio-item mx-auto">
                             <a href="p2.html">
                                 <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                                    <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+                                    <h9 class="hahage">Sellout Manager Desktop Application</h9>
                                 </div>
                                 <img class="img-fluid" src="assets/img/portfolio/webportfolioSelloutReport1.jpg" alt="..." />
                             </a>
@@ -100,7 +103,7 @@
                         <div class="portfolio-item mx-auto">
                             <a href="p3.html">
                                 <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                                    <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+                                    <h9 class="hahage">Departamental T-shirt for University of Luzon College of Computer Studies</h9>
                                 </div>
                                 <img class="img-fluid" src="assets/img/portfolio/webportfolioCCS.jpg" alt="..." />
                             </a>
@@ -113,7 +116,7 @@
                         <div class="portfolio-item mx-auto">
                             <a href="p4.html">
                                 <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                                    <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+                                    <h9 class="hahage">PC Hardware Servicing</h9>
                                 </div>
                                 <img class="img-fluid" src="assets/img/portfolio/webportfolioPchardware.jpg" alt="..." />
                             </a>
@@ -123,11 +126,14 @@
 
                     <!-- Portfolio Item 5  -->
                     <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
-                        <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal5">
-                            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                                <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
-                            </div>
-                            <img class="img-fluid" src="assets/img/portfolio/safe.png" alt="..." />
+                        <div class="portfolio-item mx-auto">
+                            <a href="p5.html">
+                                <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                                    <h9 class="hahage">Short Video Presentation for Smart Communications</h9>
+                                </div>
+                                <img class="img-fluid" src="assets/img/portfolio/webportfolioSmartJunefel.jpg" alt="..." />
+                            </a>
+
                         </div>
                     </div>
                   
@@ -195,7 +201,7 @@
                 <!-- About Section Content-->
                 <div class="row">
                     <!--    <div class=" ms-auto"><p class="lead">Creative, innovative and committed professional with experience in programming, data management, Microsoft Excel, and Graphics design. I am passionate about design, development and data. I really love what I do.</p></div> -->
-                    <div class=" ms-auto"><p class="hahage">Creative, innovative and committed professional with experience in Technical Support, Microsoft Excel, data management, programming, and Graphic design. I passionate about attention to detail, design, development, and data.</p></div>
+                    <div class=" ms-auto"><p class="hahage">Creative, innovative and committed professional with experience in Technical Support, Microsoft Excel, data management, programming, and Graphic design. I am passionate about attention to detail, design, development, and data.</p></div>
                     
                 </div>
                 <!-- About Section Button-->
