--- a/p4.html
+++ b/p4.html
@@ -7,7 +7,7 @@
         <meta name="author" content="" />
         <title>Bryner Gatchalian | Portfolio</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="assets/bglogo.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -69,6 +69,8 @@
                       <div class="owl-carousel owl-1">
                         <div><img src="assets/img/portfolio/webportfolioPchardware.jpg" alt="Image" class="img-fluid"></div>
                         <div><img src="assets/img/portfolio/webportfolioPchardware1.jpg" alt="Image" class="img-fluid"></div>
+                        <div><img src="assets/img/portfolio/webportfolioPchardware2.jpg" alt="Image" class="img-fluid"></div>
+                        <div><img src="assets/img/portfolio/webportfolioPchardware3.jpg" alt="Image" class="img-fluid"></div>
                         
                       </div>
                   </div>
@@ -77,7 +79,7 @@
 
                 <!-- Texts/Info-->
                 <div class="row">
-                    <div class="ms-autoportfolio"><p class="hahage">As a side hustle I use my Hardware Servicing skills to </p></div>
+                    <div class="ms-autoportfolio"><p class="hahage"></p></div>
                     <!--<div class="col-lg-4 me-auto"><p class="lead">You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p></div>-->
                 </div>
 
