--- a/p3.html
+++ b/p3.html
@@ -51,7 +51,7 @@
         <section class="page-section portfolio" id="portfolio">
             <div class="container">
                 <!-- Portfolio Section Heading-->
-                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">University of Luzon College of Computer Studies Shirt</h2>
+                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Departmental T-shirt</h2>
                 <!-- Icon Divider-->
                 <div class="divider-custom">
                     <div class="divider-custom-line"></div>
@@ -79,7 +79,7 @@
 
                 <!-- Texts/Info-->
                 <div class="row">
-                    <div class="ms-autoportfolio"><p class="hahage">University of Luzon College of Computer Studies reached out to me for a new t-shirt design to be used as their departamental t-shirt. This is the result of that work.</p></div>
+                    <div class="ms-autoportfolio"><p class="hahage">Nearing the end of my academic year in University of Luzon College of Computer Studies, I designed a t-shirt for the department as it would be used by the students, facuty members, and staff. It was then made their official Departmental T-shirt</p></div>
                     <!--<div class="col-lg-4 me-auto"><p class="lead">You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p></div>-->
                 </div>
 
