--- a/p4.html
+++ b/p4.html
@@ -79,7 +79,7 @@
 
                 <!-- Texts/Info-->
                 <div class="row">
-                    <div class="ms-autoportfolio"><p class="hahage"></p></div>
+                    <div class="ms-autoportfolio"><p class="hahage">With my knowledge in technical support and hardware servicing, I provide PC building, troubleshooting, and laptop upgrade services to clients.</p></div>
                     <!--<div class="col-lg-4 me-auto"><p class="lead">You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p></div>-->
                 </div>
 
