--- a/p5.html
+++ b/p5.html
@@ -67,13 +67,9 @@
           
                 <!-- SLIDE-->
 
-
-
-
-
                 <!-- Texts/Info-->
                 <div class="row">
-                    <div class="ms-autoportfolio"><p class="hahage"></p></div>
+                    <div class="ms-autoportfolio"><p class="hahage">I edited a short video with the use of Adobe Premiere Pro, the video was presented in a meeting with the higher management of Smart Communications </p></div>
                     <!--<div class="col-lg-4 me-auto"><p class="lead">You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p></div>-->
                 </div>
 
