--- a/index.html
+++ b/index.html
@@ -532,12 +532,12 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/resume_2.jpg" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/resume4.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <!--<p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>-->
 
                                     <div class="text-center mt-4">
-                                        <a class="btn btn-primary" href="https://drive.google.com/uc?export=download&id=16JbUQgxrhco5oT7n8W9zjD1rVanlSoEj">
+                                        <a class="btn btn-primary" href="https://drive.google.com/uc?export=download&id=14qmn1DsIxMjsGChFrjVHgZuqp0E_8VMZ">
                                             <i class="fas fa-download me-2"></i>
                                             Download
                                         </a>
