--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                 <div class="row">
                          
                     <div class=" ms-auto"><p class="hahage">I currently work as an IT Administrator for a retail and wholesale trading company
-                        which is an accredited distributor of Smart Communications. There, I personally oversee and maintain the hardware and software infastructure 
+                        which is an accredited distributor of Smart Communications. There, I oversee and maintain the hardware and software infastructure 
                         of the company and manage the data of its customers, clients, and sales.<br><br>
 
                         Before that, I graduated from University of Luzon with a bachelor's degree in information technology, 
@@ -603,7 +603,7 @@
                                     <!--<p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>-->
 
                                     <div class="text-center mt-4">
-                                        <a class="btn btn-primary" href="https://drive.google.com/uc?export=download&id=14qmn1DsIxMjsGChFrjVHgZuqp0E_8VMZ">
+                                        <a class="btn btn-primary" href="https://drive.google.com/uc?export=download&id=1KX3oUqgPLXEpNUvQz6JgvL3QeiwkzTUZ">
                                             <i class="fas fa-download me-2"></i>
                                             Download
                                         </a>
