--- a/p2.html
+++ b/p2.html
@@ -79,7 +79,7 @@
 
                 <!-- Texts/Info-->
                 <div class="row">
-                    <div class="ms-autoportfolio"><p class="hahage">This desktop application manages the sellout data of QSL Wireless. It provides daily, weekly, and monthly sellout reports. It also monitors performance of a Sales Personnels, and Loading stations, in which, can be useful in terms of helping the company make better decisions and take necessary actions.</p></div>
+                    <div class="ms-autoportfolio"><p class="hahage">In order to efficiently work with data, I developed a desktop application that manages the sellout data of QSL Wireless. It provides daily, weekly, and monthly sellout reports. It also monitors performance of Sales Personnels, and Loading stations, in which, can be useful in terms of helping the company make better decisions and take necessary actions.</p></div>
                     <!--<div class="col-lg-4 me-auto"><p class="lead">You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p></div>-->
                 </div>
 
